--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_gradient"
     tools:context=".LoginActivity">
 
 
@@ -18,13 +19,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <TextView
                 android:id="@+id/login_image"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:scaleType="fitCenter"
+                android:layout_marginTop="125dp"
+                android:layout_marginLeft="25dp"
+                android:text="FLOW"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
+                android:layout_centerHorizontal="true"
+                android:textSize="70sp"
                 android:layout_alignParentLeft="true" />
 
             <EditText
@@ -33,9 +41,11 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/login_image"
+                android:drawableStart="@drawable/email"
+                android:drawableLeft="@drawable/email"
                 android:hint="Email..."
                 android:inputType="textEmailAddress"
-                android:background="@drawable/inputs"
+                android:background="@color/colorAccent"
                 android:padding="4dp"
                 android:layout_marginTop="25dp"
                 android:layout_marginLeft="17dp"
@@ -49,8 +59,10 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/login_email"
                 android:hint="Password..."
+                android:drawableStart="@drawable/password"
+                android:drawableLeft="@drawable/password"
                 android:inputType="textPassword"
-                android:background="@drawable/inputs"
+                android:background="@color/colorAccent"
                 android:padding="4dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="17dp"
@@ -70,7 +82,7 @@
                 android:textAlignment="textEnd"
                 android:textSize="17sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorAccent"
                 android:gravity="end" />
 
             <Button
@@ -86,7 +98,7 @@
                 android:textAllCaps="false"
                 android:textSize="24sp"
                 android:textColor="@android:color/background_light"
-                android:background="@drawable/buttons"
+                android:background="#1f3659"
                 />
 
             <TextView
@@ -102,7 +114,7 @@
                 android:textAlignment="center"
                 android:textSize="17sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorAccent"
                 />
 
             <TextView
@@ -118,6 +130,7 @@
                 android:textAlignment="center"
                 android:textSize="17sp"
                 android:textStyle="bold"
+                android:textColor="@color/colorAccent"
                 />
 
             <Button
@@ -133,7 +146,9 @@
                 android:textAllCaps="false"
                 android:textSize="24sp"
                 android:textColor="@android:color/background_light"
-                android:background="@drawable/buttons"
+                android:background="#1f3659"
+                android:drawableStart="@drawable/phone"
+                android:drawableLeft="@drawable/phone"
                 />
 
         </RelativeLayout>
