--- a/app/src/main/res/layout/activity_phone_login.xml
+++ b/app/src/main/res/layout/activity_phone_login.xml
@@ -4,23 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_gradient"
     tools:context=".PhoneLoginActivity">
 
     <EditText
         android:id="@+id/phone_nnumber_input"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_marginStart="17dp"
         android:layout_marginEnd="17dp"
-        android:layout_marginTop="180dp"
-        android:background="@drawable/inputs"
+        android:layout_marginTop="270dp"
+        android:background="@color/colorAccent"
         android:padding="8dp"
-        android:hint="Write phone number here..."
+        android:hint="Mobile Number.."
         android:textAllCaps="false"
-        android:textSize="15sp"
+        android:textSize="20sp"
         android:textAlignment="center"
         android:textStyle="bold"
+        android:gravity="center"
         android:layout_alignParentLeft="true" />
 
     <EditText
@@ -53,7 +55,7 @@
         android:layout_marginStart="17dp"
         android:layout_marginEnd="17dp"
         android:layout_marginTop="1dp"
-        android:background="@drawable/buttons"
+        android:background="#1f3659"
         android:textColor="@android:color/background_light"
         android:textSize="19sp"
         android:textAlignment="center"
