--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/set_profile_image"
         android:inputType="textMultiLine"
-        android:hint="username"
+        android:hint="Enter your username"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/set_user_name"
         android:inputType="textMultiLine"
-        android:hint="hey, i am available now."
+        android:hint="Enter your status!"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/set_profile_status"
         android:inputType="textMultiLine"
-        android:text="Update"
+        android:text="Save"
         android:textAlignment="center"
         android:textColor="@android:color/background_light"
         android:textStyle="bold"
